--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/evindor/doxi",
   "dependencies": {
     "dox": "https://github.com/evindor/dox/tarball/master",
-    "jade": "^1.3.1"
+    "jade": "^1.3.1",
+    "through2": "^0.5.1"
   }
 }
