--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "dox": "https://github.com/evindor/dox/tarball/master",
     "jade": "^1.3.1",
-    "through2": "^0.5.1"
+    "through2": "^0.5.1",
+    "gulp-util": "^2.2.19"
   }
 }
