--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dox": "https://github.com/evindor/dox/tarball/master",
     "jade": "^1.3.1",
     "through2": "^0.5.1",
-    "gulp-util": "^2.2.19"
+    "gulp-util": "^2.2.19",
+    "underscore": "^1.6.0"
   }
 }
