--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jade": "^1.3.1",
     "through2": "^0.5.1",
     "gulp-util": "^2.2.19",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "normalize.css": "^3.0.1"
   }
 }
