--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doxi",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Customisable documentation generator on top of TJ's dox",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/evindor/doxi",
   "dependencies": {
-    "dox": "https://github.com/evindor/dox/tarball/master",
+    "dox": "^0.4.5",
     "jade": "^1.3.1",
     "through2": "^0.5.1",
     "gulp-util": "^2.2.19",
