--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   },
   "homepage": "https://github.com/evindor/doxi",
   "dependencies": {
-    "dox": "^0.4.5",
+    "dox": "^0.4.6",
     "jade": "^1.3.1",
     "through2": "^0.5.1",
     "gulp-util": "^2.2.19",
     "underscore": "^1.6.0",
-    "normalize.css": "^3.0.1"
+    "normalize.css": "^3.0.1",
+    "highlight.js": "^8.1.0"
   }
 }
