--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-util": "^2.2.19",
     "underscore": "^1.6.0",
     "normalize.css": "^3.0.1",
-    "highlight.js": "^8.1.0"
+    "highlight.js": "^8.1.0",
+    "marked": "^0.3.2"
   }
 }
