--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "normalize.css": "^3.0.1",
     "highlight.js": "^8.1.0",
     "marked": "^0.3.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.5"
   }
 }
